Added some tests